# thallium-flight-benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  bake_writer.sh  client.sh  deploy_arrow.sh  deploy_data.sh  deploy_libfabric.sh  ib.sh  install.sh  server.sh  yokan_config.json
bake/: CMakeLists.txt  config.json  server.c  server.cc  writer.cc
experiments/breakdown/: analyze.py  client_1  client_10  client_100  results  server_1  server_10  server_100
experiments/components/: flight-ext4  flight-ext4dataset  flight-transport  plot.py  skyhook-cephfs  thallium-bake  thallium-ext4  thallium-ext4dataset  thallium-ext4mmap  thallium-transport
experiments/latency/: flight.out  plot.py  thallium.out
experiments/latency_100_selectivity/: flight.out.2000  flight.out.3000  thallium.out.3000
experiments/selectivity/: bake_tl  dataset_mem_tl_ofi_tcp  dataset_mem_tl_ofi_verbs  dataset_mem_tl_ucx_all  dataset_mem_tl_ucx_tcp  file_flight  file_tl  fl_tcp_grpc  plot.py
experiments/single_segment/: tl_ofi_verbs  tl_ofi_verbs_se
flight/: CMakeLists.txt  client.cc  server.cc
margo/: CMakeLists.txt  client.c  server.c
misc/: install.sh
misc/substrait/: main.py  req.txt
repr/: CMakeLists.txt  client.cc  client_1.cc  notes  server.cc  server_1.cc
results/: original  plot.py
results/0/: result_client_1.txt  result_client_10.txt  result_server_1.txt  result_server_10.txt
results/2/: result_client_1.txt  result_client_10.txt  result_client_100.txt  result_server_1.txt  result_server_10.txt  result_server_100.txt  results
results/2-fix/: result_client_1.txt  result_client_10.txt  result_client_100.txt  result_server_1.txt  result_server_10.txt  result_server_100.txt  results
results/3/: flight  misc.txt  plot.py  result_thallium.txt  thallium-1  thallium-2  thallium-reb-pipe  thallium1
results/original/: result_client_100.txt  result_server_100.txt
scripts/: bake_writer.sh  client.sh  server.sh
src/: CMakeLists.txt  FindArrow.cmake  FindArrowDataset.cmake  ace.h  client.cc  payload.h  request.h  server.cc  util.h
thallium/: CMakeLists.txt  ace.h  acero.h  arrow_headers.h  client.cc  client_1.cc  client_2-fix.cc  client_2.cc  client_3.cc  client_3_measure.cc  client_4.cc  client_5.cc  client_6.cc  payload.h  server.cc  server_1.cc  server_2-fix.cc  server_2.cc  server_3.cc  server_3_measure.cc  server_4.cc  server_5.cc  server_6.cc  trace.h  util.h  utils.h  yokan_config.json
