cmake_minimum_required(VERSION 3.2)

find_package(mercury REQUIRED)
find_package(thallium REQUIRED)
find_package(yokan REQUIRED)
find_package(Arrow REQUIRED)
find_package(Boost REQUIRED)
find_package (PkgConfig REQUIRED)
pkg_check_modules (MARGO REQUIRED IMPORTED_TARGET margo)
pkg_check_modules (ABT REQUIRED IMPORTED_TARGET argobots)
pkg_check_modules (ABTIO REQUIRED IMPORTED_TARGET abt-io)
pkg_check_modules (SSG REQUIRED IMPORTED_TARGET ssg)
pkg_check_modules (BAKECLIENT REQUIRED IMPORTED_TARGET bake-client)
pkg_check_modules (BAKESERVER REQUIRED IMPORTED_TARGET bake-server)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(tc client.cc)
target_link_libraries(tc thallium arrow arrow_dataset)
add_executable(tc1 client_1.cc)
target_link_libraries(tc1 thallium arrow arrow_dataset)
add_executable(tc2 client_2.cc)
target_link_libraries(tc2 thallium arrow arrow_dataset)
add_executable(tc2_fix client_2-fix.cc)
target_link_libraries(tc2_fix thallium arrow arrow_dataset)
add_executable(tc3 client_3.cc)
target_link_libraries(tc3 thallium arrow arrow_dataset)
add_executable(tc4 client_4.cc)
target_link_libraries(tc4 thallium arrow arrow_dataset)
add_executable(tc5 client_5.cc)
target_link_libraries(tc5 thallium arrow arrow_dataset)

add_executable(ts server.cc)
target_link_libraries(ts thallium yokan-admin yokan-client yokan-server arrow arrow_dataset PkgConfig::BAKECLIENT PkgConfig::BAKESERVER)
add_executable(ts1 server_1.cc)
target_link_libraries(ts1 thallium yokan-admin yokan-client yokan-server arrow arrow_dataset PkgConfig::BAKECLIENT PkgConfig::BAKESERVER)
add_executable(ts2 server_2.cc)
target_link_libraries(ts2 thallium yokan-admin yokan-client yokan-server arrow arrow_dataset PkgConfig::BAKECLIENT PkgConfig::BAKESERVER)
add_executable(ts2_fix server_2-fix.cc)
target_link_libraries(ts2_fix thallium arrow arrow_dataset)
add_executable(ts3 server_3.cc)
target_link_libraries(ts3 thallium arrow arrow_dataset)
add_executable(ts4 server_4.cc)
target_link_libraries(ts4 thallium arrow arrow_dataset)
add_executable(ts5 server_5.cc)
target_link_libraries(ts5 thallium arrow arrow_dataset)
